Archive2/f5/56c14d307e4b5c/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:7:27: error: expected primary-expression before 'td'
 ptime now = time_duration td(1,2,3);
                           ^
main.cpp:10:1: error: 'cout' was not declared in this scope
 cout << ( now - later );
 ^
main.cpp:10:1: note: suggested alternative:
In file included from /usr/local/include/boost/assert.hpp:82:0,
                 from /usr/local/include/boost/smart_ptr/shared_ptr.hpp:29,
                 from /usr/local/include/boost/shared_ptr.hpp:17,
                 from /usr/local/include/boost/date_time/gregorian/greg_month.hpp:14,
                 from /usr/local/include/boost/date_time/gregorian/greg_ymd.hpp:16,
                 from /usr/local/include/boost/date_time/gregorian/greg_calendar.hpp:16,
                 from /usr/local/include/boost/date_time/gregorian/gregorian_types.hpp:19,
                 from /usr/local/include/boost/date_time/posix_time/posix_time_config.hpp:18,
                 from /usr/local/include/boost/date_time/posix_time/posix_time_system.hpp:13,
                 from /usr/local/include/boost/date_time/posix_time/ptime.hpp:12,
                 from /usr/local/include/boost/date_time/posix_time/posix_time.hpp:15,
                 from main.cpp:1:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:10:17: error: 'later' was not declared in this scope
 cout << ( now - later );
                 ^
